# WindFramework

./: README.md
Core/: WindFramework.cpp
Core/Controls/: BaseControl.cpp  Button.cpp  ImageView.cpp  Menu.cpp  ScrollBar.cpp  TextInput.cpp  w_Timer.cpp
Core/Drawing/: Font.cpp  GraphicsElement.cpp  Image.cpp  Shaders.cpp
Core/Drawing/Animation/: AnimationBase.cpp  ColorAnimation.cpp  Function.cpp  easeAnimation.cpp
Core/OSWindow/: oswindow.cpp
Core/Services/: LogService.cpp
builds/: Makefile  Makefile.linux.mk  Makefile.mac.mk  Makefile.windows.mk  build.sh  compress.sh  embedResources.sh  run.sh
builds/android/: CMakeLists.txt  libcore.cpp
builds/android/lib/armeabi-v7a/: libfreetype.la
builds/resources/shaders/: ColorShader_Fragment.glsl  ColorShader_Vertex.glsl  FontShader_Fragment.glsl  FontShader_Vertex.glsl  GlyphShader_Fragment.glsl  GlyphShader_Vertex.glsl  ImageShader_Fragment.glsl  ImageShader_Vertex.glsl
builds/resources/shaders-es/300/: ColorShader_Fragment.glsl  ColorShader_Vertex.glsl  FontShader_Fragment.glsl  FontShader_Vertex.glsl  GlyphShader_Vertex.glsl
builds/tools/: ResourceCompiler
builds/tools/Sources/: ResourceCompiler.cpp
include/: GL.h
include/Core/: WindCore.h
include/Core/Controls/: BaseControl.h  Button.h  ImageView.h  Menu.h  ScrollBar.h  TextInput.h  w_Timer.h
include/Core/Drawing/: Color.h  Font.h  GraphicsElement.h  Image.h  Point.h  Rectangle.h  Shaders.h
include/Core/Drawing/Animation/: AnimationBase.h  ColorAnimation.h  Functions.h  easeAnimation.h
include/Core/OSWindow/: EventArgs.h  OSWindow.h
include/Core/Services/: LogService.h
include/ResourceHeaders/: Fonts_ResourcesFile.h  GL_shaders.h  GLes_shaders.h  Images_RF.h
